@@ -21,6 +21,7 @@
     height. This should apply to all Linux Gtk-like styles, not just QGtkStyle.
 12. Use '#' for track number column title in table view.
 13. Allow setting of column alignments in table views.
+14. Add 'setCollection' to Cantata's DBUS interface.
 
 1.5.2
 -----
